force-app/main/default/objects/Journey_Plan__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency (days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>7</fullName><default>false</default><label>7</label></value>
            <value><fullName>14</fullName><default>false</default><label>14</label></value>
            <value><fullName>28</fullName><default>false</default><label>28</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>