force-app/main/default/objects/Journey_Plan__c/fields/Is_Active_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Plan__c</fullName>
    <label>Is Active Plan</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>