force-app/main/default/objects/Journey_Plan__c/fields/Is_Repeatable__c.field-meta.xml
<CustomField>
    <fullName>Is_Repeatable__c</fullName>
    <label>Is Repeatable</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>