force-app/main/default/objects/Journey_Plan__c/fields/JC__c.field-meta.xml
<CustomField>
    <fullName>JC__c</fullName>
    <label>JC</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Target_Period__c</referenceTo>
    <relationshipName>JourneyPlan_JC</relationshipName>
    <type>Lookup</type>
</CustomField>